<resources>
    <string name="app_name">Parstagram</string>
    <string name="access_field_1">Username</string>
    <string name="access_field_2">Password</string>
    <string name="login_button">Log In</string>
    <string name="signup_string">New to Parstagram?</string>
    <string name="signup_link">Sign Up</string>

    <string name="sign_up">Sign Up</string>

    <string name="post_img_desc">image associated with post</string>
    <string name="pic_button">Take Picture</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="sample_username">berry</string>
    <string name="sample_description">me when...</string>
    <string name="sample_time">July 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>